# PyArmX

./: .gitignore  pyproject.toml
examples/: mjc.py  real2sim.py  sim_ik.py  sim_ruckig.py  test_joints.py
src/pyarmx/: __init__.py  ik.py  ik_kb.py  interp.py  joint.py  sim.py
src/pyarmx/utils/: log.py  loops.py
xml/gripper/: config.json  robot.xml
xml/gripper/assets/: base_adapter.part  base_adapter.stl  box.part  box.stl  broad.part  broad.stl  dm_4310_adapter.part  dm_4310_cover.part  dm_4310_cover.stl  dm_4310_motor.part  dm_4340_cover.part  dm_4340_cover.stl  dm_4340_motor.part  finger_left.part  finger_left.stl  finger_right.part  finger_right.stl  l_link.part  link_cylinder.part  long_link.part  long_link.stl  screw_0.part  screw_0.stl  screw_1.part  screw_1.stl  screw_2.part  screw_2.stl  short_link.part  short_link.stl  stepper.part  stepper.stl
xml/mjcf/: config.json  robot.xml
xml/mjcf/assets/: 4310__3d_20240814_1.stl  4310__3d_20240814_1__3.part  4310__ver_b0001_1_1_1_1_4.part  4310__ver_b0001_1_1_1_1_4.stl  dm_4340_3d_1_1_1_1_4.part  l_link.stl  long_link.part  short_link.part
xml/urdf/: config.json  robot.mjcf  robot.urdf
xml/urdf/assets/: 4310__3d_20240814_1.part  4310__3d_20240814_1__2.part  broad.part  l_link.part  link_cylinder.part  link_cylinder.stl
