[project]
name = "pyarmx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DBinK", email = "DBinKv1@Gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "keyboard>=0.13.5",
    "loguru>=0.7.3",
    "looptick>=0.1.4",
    "mujoco>=3.6.0",
    "pydamiao",
    "pygame>=2.6.1",
    "rich>=14.3.3",
    "ruckig==0.12.2",
    "scipy>=1.15.3",
    "scipy-stubs>=1.15.3.0",
]

# [project.scripts]
# pyarmx = "pyarmx:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
stubPath = "./stubs"

[tool.uv.sources]
pydamiao = { path = "../pydamiao" }

[dependency-groups]
dev = [
    "pybind11-stubgen>=2.5.5",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
pyarmx = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
